src/forms/new/ct/examples/valid/multiple-structures.ct
65	dG = -21.40 [Initially -21.40] Asdf
1	u	0	2	0	1
2	c	1	3	0	2
3	a	2	4	0	3
4	u	3	5	0	4
5	c	4	6	0	5
6	a	5	7	0	6
7	u	6	8	0	7
8	g	7	9	65	8
9	u	8	10	64	9
10	c	9	11	63	10
11	g	10	12	62	11
12	a	11	13	61	12
13	u	12	14	0	13
14	a	13	15	0	14
15	c	14	16	0	15
16	u	15	17	0	16
17	a	16	18	0	17
18	a	17	19	0	18
19	c	18	20	0	19
20	a	19	21	60	20
21	u	20	22	59	21
22	g	21	23	58	22
23	g	22	24	57	23
24	u	23	25	56	24
25	u	24	26	55	25
26	u	25	27	54	26
27	a	26	28	53	27
28	u	27	29	52	28
29	g	28	30	51	29
30	c	29	31	50	30
31	u	30	32	49	31
32	u	31	33	48	32
33	a	32	34	47	33
34	g	33	35	46	34
35	u	34	36	45	35
36	g	35	37	44	36
37	a	36	38	0	37
38	g	37	39	0	38
39	c	38	40	0	39
40	u	39	41	0	40
41	u	40	42	0	41
42	g	41	43	0	42
43	g	42	44	0	43
44	c	43	45	36	44
45	a	44	46	35	45
46	u	45	47	34	46
47	u	46	48	33	47
48	a	47	49	32	48
49	a	48	50	31	49
50	g	49	51	30	50
51	c	50	52	29	51
52	a	51	53	28	52
53	u	52	54	27	53
54	g	53	55	26	54
55	a	54	56	25	55
56	a	55	57	24	56
57	u	56	58	23	57
58	u	57	59	22	58
59	a	58	60	21	59
60	u	59	61	20	60
61	u	60	62	12	61
62	c	61	63	11	62
63	g	62	64	10	63
64	a	63	65	9	64
65	c	64	0	8	65
65	dG = -21.40 [Initially -21.40] Asdf
1	u	0	2	0	1
2	c	1	3	0	2
3	a	2	4	0	3
4	u	3	5	0	4
5	c	4	6	0	5
6	a	5	7	0	6
7	u	6	8	0	7
8	g	7	9	65	8
9	u	8	10	64	9
10	c	9	11	63	10
11	g	10	12	62	11
12	a	11	13	61	12
13	u	12	14	0	13
14	a	13	15	0	14
15	c	14	16	0	15
16	u	15	17	0	16
17	a	16	18	0	17
18	a	17	19	0	18
19	c	18	20	0	19
20	a	19	21	60	20
21	u	20	22	59	21
22	g	21	23	58	22
23	g	22	24	57	23
24	u	23	25	56	24
25	u	24	26	55	25
26	u	25	27	54	26
27	a	26	28	53	27
28	u	27	29	52	28
29	g	28	30	51	29
30	c	29	31	50	30
31	u	30	32	49	31
32	u	31	33	48	32
33	a	32	34	47	33
34	g	33	35	46	34
35	u	34	36	45	35
36	g	35	37	44	36
37	a	36	38	0	37
38	g	37	39	0	38
39	c	38	40	0	39
40	u	39	41	0	40
41	u	40	42	0	41
42	g	41	43	0	42
43	g	42	44	0	43
44	c	43	45	36	44
45	a	44	46	35	45
46	u	45	47	34	46
47	u	46	48	33	47
48	a	47	49	32	48
49	a	48	50	31	49
50	g	49	51	30	50
51	c	50	52	29	51
52	a	51	53	28	52
53	u	52	54	27	53
54	g	53	55	26	54
55	a	54	56	25	55
56	a	55	57	24	56
57	u	56	58	23	57
58	u	57	59	22	58
59	a	58	60	21	59
60	u	59	61	20	60
61	u	60	62	12	61
62	c	61	63	11	62
63	g	62	64	10	63
64	a	63	65	9	64
65	c	64	0	8	65
65	dG = -21.40 [Initially -21.40] Asdf
1	u	0	2	0	1
2	c	1	3	0	2
3	a	2	4	0	3
4	u	3	5	0	4
5	c	4	6	0	5
6	a	5	7	0	6
7	u	6	8	0	7
8	g	7	9	65	8
9	u	8	10	64	9
10	c	9	11	63	10
11	g	10	12	62	11
12	a	11	13	61	12
13	u	12	14	0	13
14	a	13	15	0	14
15	c	14	16	0	15
16	u	15	17	0	16
17	a	16	18	0	17
18	a	17	19	0	18
19	c	18	20	0	19
20	a	19	21	60	20
21	u	20	22	59	21
22	g	21	23	58	22
23	g	22	24	57	23
24	u	23	25	56	24
25	u	24	26	55	25
26	u	25	27	54	26
27	a	26	28	53	27
28	u	27	29	52	28
29	g	28	30	51	29
30	c	29	31	50	30
31	u	30	32	49	31
32	u	31	33	48	32
33	a	32	34	47	33
34	g	33	35	46	34
35	u	34	36	45	35
36	g	35	37	44	36
37	a	36	38	0	37
38	g	37	39	0	38
39	c	38	40	0	39
40	u	39	41	0	40
41	u	40	42	0	41
42	g	41	43	0	42
43	g	42	44	0	43
44	c	43	45	36	44
45	a	44	46	35	45
46	u	45	47	34	46
47	u	46	48	33	47
48	a	47	49	32	48
49	a	48	50	31	49
50	g	49	51	30	50
51	c	50	52	29	51
52	a	51	53	28	52
53	u	52	54	27	53
54	g	53	55	26	54
55	a	54	56	25	55
56	a	55	57	24	56
57	u	56	58	23	57
58	u	57	59	22	58
59	a	58	60	21	59
60	u	59	61	20	60
61	u	60	62	12	61
62	c	61	63	11	62
63	g	62	64	10	63
64	a	63	65	9	64
65	c	64	0	8	65
