src/forms/new/ct/examples/invalid/position-line-missing-character.ct
120	dG = -39.60 [Initially -43.20] CYVaV-Delta
1       
2	a	1	3	0	2
3	a	2	4	0	3
4	g	3	5	55	4
5	c	4	6	54	5
6	a	5	7	0	6
7	a	6	8	40	7
8	c	7	9	39	8
9	c	8	10	38	9
10	c	9	11	0	10
11	g	10	12	36	11
12	u	11	13	35	12
13	u	12	14	0	13
14	a	13	15	34	14
15	u	14	16	33	15
16	a	15	17	32	16
17	c	16	18	31	17
18	u	17	19	30	18
19	g	18	20	29	19
20	g	19	21	28	20
21	c	20	22	0	21
22	g	21	23	0	22
23	u	22	24	0	23
24	g	23	25	0	24
25	u	24	26	0	25
26	g	25	27	0	26
27	a	26	28	0	27
28	c	27	29	20	28
29	c	28	30	19	29
30	a	29	31	18	30
31	g	30	32	17	31
32	u	31	33	16	32
33	g	32	34	15	33
34	u	33	35	14	34
35	g	34	36	12	35
36	c	35	37	11	36
37	a	36	38	0	37
38	g	37	39	9	38
39	g	38	40	8	39
40	u	39	41	7	40
41	g	40	42	52	41
42	g	41	43	51	42
43	c	42	44	50	43
44	a	43	45	0	44
45	a	44	46	0	45
46	u	45	47	0	46
47	g	46	48	0	47
48	g	47	49	0	48
49	a	48	50	0	49
50	g	49	51	43	50
51	c	50	52	42	51
52	c	51	53	41	52
53	a	52	54	0	53
54	g	53	55	5	54
55	c	54	56	4	55
56	a	55	57	0	56
57	a	56	58	0	57
58	c	57	59	0	58
59	g	58	60	0	59
60	u	59	61	0	60
61	c	60	62	0	61
62	a	61	63	0	62
63	a	62	64	0	63
64	c	63	65	0	64
65	c	64	66	0	65
66	u	65	67	0	66
67	c	66	68	0	67
68	u	67	69	0	68
69	a	68	70	0	69
70	c	69	71	0	70
71	c	70	72	0	71
72	c	71	73	0	72
73	a	72	74	0	73
74	a	73	75	0	74
75	c	74	76	119	75
76	u	75	77	118	76
77	c	76	78	117	77
78	u	77	79	116	78
79	g	78	80	115	79
80	u	79	81	0	80
81	g	80	82	0	81
82	g	81	83	0	82
83	u	82	84	111	83
84	g	83	85	110	84
85	u	84	86	109	85
86	a	85	87	108	86
87	g	86	88	107	87
88	g	87	89	106	88
89	u	88	90	105	89
90	c	89	91	104	90
91	u	90	92	103	91
92	c	91	93	102	92
93	a	92	94	101	93
94	g	93	95	100	94
95	u	94	96	0	95
96	a	95	97	0	96
97	c	96	98	0	97
98	a	97	99	0	98
99	u	98	100	0	99
100	c	99	101	94	100
101	u	100	102	93	101
102	g	101	103	92	102
103	g	102	104	91	103
104	g	103	105	90	104
105	g	104	106	89	105
106	c	105	107	88	106
107	u	106	108	87	107
108	u	107	109	86	108
109	a	108	110	85	109
110	c	109	111	84	110
111	a	110	112	83	111
112	a	111	113	0	112
113	c	112	114	0	113
114	u	113	115	0	114
115	c	114	116	79	115
116	a	115	117	78	116
117	g	116	118	77	117
118	g	117	119	76	118
119	g	118	120	75	119
120	g	119	0	0	120
